finish lab
